feat: getManyGenres filter by ancestors
