# src/lib/server/api/genres/get-many.ts
@@ -30,6 +30,7 @@ export type GetManyGenresParams<I extends FindAllInclude> = {
     updatedAt?: Date
     createdBy?: number
     parents?: number[]
+    ancestors?: number[]
   }
   sort?: {
     field?: FindAllSortField
@@ -55,6 +56,15 @@ export default async function getManyGenres<I extends FindAllInclude = never>(
 
   if (filter.parents !== undefined) {
     const ids = await getParentsFilterGenreIds(filter.parents, dbConnection)
+    if (filter_.ids !== undefined) {
+      filter_.ids = intersection(filter_.ids, ids)
+    } else {
+      filter_.ids = ids
+    }
+  }
+
+  if (filter.ancestors !== undefined) {
+    const ids = await getAncestorsFilterGenreIds(filter.ancestors, dbConnection)
     if (filter_.ids !== undefined) {
       filter_.ids = intersection(filter_.ids, ids)
     } else {
@@ -97,4 +107,41 @@ async function getParentsFilterGenreIds(
     .map((parentChildren) => parentChildren.map((child) => child.childId))
     .reduce((acc, val) => intersection(acc, val))
   return childIds
+}
+
+// Run a depth-first search starting from each ancestor to find all descendants.
+// Then take the intersection of all descendants to get the common descendants.
+async function getAncestorsFilterGenreIds(
+  ancestors: number[],
+  dbConnection: IDrizzleConnection,
+): Promise<number[]> {
+  const genreParentsDb = new GenreParentsDatabase()
+  const allParentChildren = await genreParentsDb.findAll(dbConnection)
+  const parentsMap = allParentChildren.reduce(
+    (acc, val) => {
+      acc[val.parentId] = acc[val.parentId] ?? []
+      acc[val.parentId].push(val.childId)
+      return acc
+    },
+    {} as Record<number, number[]>,
+  )
+
+  const descendantLists = ancestors.map((ancestor) => dfs(ancestor, parentsMap))
+  const descendantIds = descendantLists.reduce((acc, val) => intersection(acc, val))
+  return descendantIds
+}
+
+function dfs(ancestor: number, parentsMap: Record<number, number[]>): number[] {
+  const queue: number[] = [ancestor]
+  const descendants: number[] = []
+
+  let currentNode = queue.shift()
+  while (currentNode !== undefined) {
+    const children = parentsMap[currentNode] ?? []
+    descendants.push(...children)
+    queue.push(...children)
+    currentNode = queue.shift()
+  }
+
+  return descendants
 }
