# src/routes/api/genres/utils.ts
@@ -28,6 +28,7 @@ const schema = z.object({
       updatedAt: z.coerce.date().optional(),
       createdBy: z.coerce.number().int().optional(),
       parents: z.coerce.number().int().array().optional(),
+      ancestors: z.coerce.number().int().array().optional(),
     })
     .optional(),
   sort: z
@@ -40,6 +41,7 @@ const schema = z.object({
 
 export function parseQueryParams(url: URL) {
   const parents = url.searchParams.getAll('parent')
+  const ancestors = url.searchParams.getAll('ancestor')
 
   return schema.safeParse({
     skip: url.searchParams.get('skip') ?? undefined,
@@ -58,6 +60,7 @@ export function parseQueryParams(url: URL) {
       updatedAt: url.searchParams.get('updatedAt') ?? undefined,
       createdBy: url.searchParams.get('createdBy') ?? undefined,
       parents: parents.length === 0 ? undefined : parents,
+      ancestors: ancestors.length === 0 ? undefined : ancestors,
     },
     sort: {
       field: url.searchParams.get('sort') ?? undefined,
